tests/errors/syntax/missing_semicolon_init_expr_branches.odl
main :: () -> void {
    if x := 0 a then return;
};